# Web-scraping

./: pyproject.toml
Lib/: config.ini
Scripts/: connect.py  scrape.py  seed.py
