[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_scraping"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
